# swip_ua

./: .env   .gitignore  Makefile  img.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 00597d29e042_add_redirections_and_subscription_to_.py  02e9fb0dffd2_initial_migration.py  0b718f350759_.py  0de0be6e42d8_add_geolocation_to_advert4.py  23a1e704c043_add_geolocation_to_adverts.py  2dda00c57b75_добавлены_модели_жалоб_и_список_желаний_.py  3b599b3688df_add_house_id_to_galleries.py  3f5abd313628_initial_migration.py  4010ca977444_rename_column.py  4733a2feadc5_your_message.py  4dfd6c51a3b2_init.py  5f2edcc4d27a_добавлено_поле_is_blacklisted.py  6fcf6a633456_implemened_message_models.py  74a510968c3b_изменили_юзера.py  86d484ec8ab3_add_columns.py  891d868aac22_fix_advert_fk.py  8c95cfcbb8b8_implemened_message_models.py  9063b20414c0_add_position_to_galleries.py  96d1e272a145_удалены_поля_главное_изображение.py  9c3222952a1d_add_house_id_to_galleries.py  9e819de8c0fc_fix_advert_fk.py  a36a9257688a_add_galleries_and_gallery_images_add_.py  a5978bee996a_добавлены_модели_жалоб_и_список_желаний.py  cc1516d76d0b_add_houses_relationship_to_user.py  ce3408e2e42b_rename_column_advert_and_add_colum2.py  ce8249fc78f4_add_columns_password_nulble_false.py  dc31de46e298_rename_column_advert_and_add_column.py  e0dabd7e93b9_.py  eb9b95684cca_add_photo_field_to_users.py  ec478de6b32b_add_columns_password.py  ef6b1186bbee_rename_column_advert_and_add_colum3.py  f0a31b180048_add_column_for_user_email_verifaied_and_.py
config/: app.py  ioc.py
config/config/: settings.py
config/infra/: builder.py
config/infra/config/: settings.py
config/infra/providers/: JWTservice.py  advert_provider.py  auth_provider.py  building_provider.py  complaint_provider.py  favorite_provider.py  filter_provider.py  gallery_provider.py  message_provider.py  notification.py  (+7 more)
core/: app.py  ioc.py
core/config/: settings.py
core/infra/: builder.py
deploy/: .env.development  Dockerfile  docker-compose.owerride.yml  docker-compose.production.yml  docker-compose.yml
deploy/nginx/: Dockerfile  nginx.conf
src/: config.py  database.py  enums.py  media_router.py
src/advert/: image_utils.py  router.py
src/auth/: auth.py  dependencies.py  role_dependencies.py  router.py  tasks.py
src/building/: router.py
src/users/: admin_routers.py  black_list.py  notary_routers.py  router.py
tests/: conf_test.py  pytest.ini
tests/test/: user_test.py
(+251 files in other folders)
