[tool.poetry]
name = "swipe"
version = "0.0.1"
description = "---SWIPE_UA---"
authors = ["i am <example@example.com>"]
package-mode = false

# отключаем установку проекта как пакета
packages = []

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.121.1,<0.122.0"
uvicorn = ">=0.24.0,<0.25.0"
sqlalchemy = ">=2.0.20,<3.0.0"
asyncpg = ">=0.27.0"
alembic = ">=1.17.0"
httpx = ">=0.27.0,<0.28.0"
python-dotenv = ">=1.0.0,<2.0.0"
dishka = "^1.7.2"
pydantic-settings = "^2.12.0"
redis = {extras = ["async"], version = "^7.0.1"}
aiosqlite = "^0.21.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
